Added first labeled frames(test)

--- a/frame_making.ipynb
+++ b/frame_making.ipynb
@@ -6,16 +6,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-15T14:41:14.861766Z",
-     "start_time": "2025-01-15T14:41:14.753108Z"
+     "end_time": "2025-01-16T07:23:31.093426Z",
+     "start_time": "2025-01-16T07:23:30.263606Z"
     }
    },
    "source": [
     "import cv2\n",
     "import os\n",
     "\n",
-    "video_path = '/Users/admlanno/Desktop/Курсовая/processed_vidoes/attacker_foul1.mp4'\n",
-    "output_folder = '/Users/admlanno/Desktop/Курсовая/Frames/attacker_foul1'\n",
+    "video_path = '/Users/admlanno/Desktop/Курсовая/processed_vidoes/legal guarding position.mp4'\n",
+    "output_folder = '/Users/admlanno/Desktop/Курсовая/Frames/illegal_guarding_pos1'\n",
     "\n",
     "# Создайте папку, если она не существует\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
@@ -29,7 +29,6 @@
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
     "        break\n",
-    "    # Сохранять только каждый frame_skip кадр\n",
     "    if count % frame_skip == 0:\n",
     "        frame_filename = f\"{output_folder}/frame_{count:04d}.jpg\"\n",
     "        cv2.imwrite(frame_filename, frame)\n",
@@ -43,11 +42,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 12 frames out of 62 total frames.\n"
+      "Extracted 30 frames out of 151 total frames.\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 1
   },
   {
    "metadata": {
