--- a/scripts/frame_making.ipynb
+++ b/scripts/frame_making.ipynb
@@ -14,16 +14,15 @@
     "import cv2\n",
     "import os\n",
     "\n",
-    "video_path = '/Users/admlanno/Desktop/Курсовая/processed_vidoes/legal guarding position.mp4'\n",
+    "video_path = '/raw_data/processed_vidoes/legal guarding position.mp4'\n",
     "output_folder = '/Users/admlanno/Desktop/Курсовая/Frames/illegal_guarding_pos1'\n",
     "\n",
-    "# Создайте папку, если она не существует\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
     "cap = cv2.VideoCapture(video_path)\n",
-    "frame_rate = int(cap.get(cv2.CAP_PROP_FPS))  # Количество кадров в секунду\n",
+    "frame_rate = int(cap.get(cv2.CAP_PROP_FPS)) \n",
     "count = 0\n",
-    "frame_skip = 5  # Сохранять каждый 5-й кадр\n",
+    "frame_skip = 5 \n",
     "\n",
     "while cap.isOpened():\n",
     "    ret, frame = cap.read()\n",
