--- a/scripts/frame_making.ipynb
+++ b/scripts/frame_making.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-01-17T10:32:03.220136Z",
+     "start_time": "2025-01-17T10:32:02.903251Z"
+    }
    },
    "source": [
     "import cv2\n",
     "import os\n",
     "\n",
-    "video_path = '/raw_data/processed_vidoes/legal guarding position.mp4'\n",
-    "output_folder = '/Users/admlanno/Desktop/Курсовая/Frames/illegal_guarding_pos1'\n",
+    "video_path = '/Users/admlanno/Desktop/Курсовая/raw_data/processed_vidoes/legal_guarding_view2.mp4'\n",
+    "output_folder = '/Users/admlanno/Desktop/Курсовая/Frames/illegal_guarding_view2'\n",
     "\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
@@ -33,8 +37,16 @@
     "cap.release()\n",
     "print(f\"Extracted {count // frame_skip} frames out of {count} total frames.\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted 17 frames out of 89 total frames.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
