add: labeled images

--- a/scripts/frame_making.ipynb
+++ b/scripts/frame_making.ipynb
@@ -6,16 +6,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-17T10:32:03.220136Z",
-     "start_time": "2025-01-17T10:32:02.903251Z"
+     "end_time": "2025-01-17T12:32:40.436057Z",
+     "start_time": "2025-01-17T12:32:38.104999Z"
     }
    },
    "source": [
     "import cv2\n",
     "import os\n",
     "\n",
-    "video_path = '/Users/admlanno/Desktop/Курсовая/raw_data/processed_vidoes/legal_guarding_view2.mp4'\n",
-    "output_folder = '/Users/admlanno/Desktop/Курсовая/Frames/illegal_guarding_view2'\n",
+    "video_path = '/Users/admlanno/Desktop/Курсовая/raw_data/processed_vidoes/legal_guarding_view2.mov'\n",
+    "output_folder = '/Users/admlanno/Desktop/Курсовая/'\n",
     "\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
@@ -42,11 +42,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 17 frames out of 89 total frames.\n"
+      "Extracted 35 frames out of 176 total frames.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   }
  ],
  "metadata": {
