add: augmentated pictures

--- a/scripts/frame_making.ipynb
+++ b/scripts/frame_making.ipynb
@@ -6,16 +6,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-19T10:26:17.041843Z",
-     "start_time": "2025-01-19T10:26:14.882752Z"
+     "end_time": "2025-01-20T10:34:34.417991Z",
+     "start_time": "2025-01-20T10:34:32.292497Z"
     }
    },
    "source": [
     "import cv2\n",
     "import os\n",
     "\n",
-    "video_path = '/Users/admlanno/Desktop/Курсовая/raw_data/processed_vidoes/illeg_guard_3_view1.mov'\n",
-    "output_folder = '/Users/admlanno/Desktop/Курсовая/raw_data/Frames/illegal_guarding_3_view1'\n",
+    "video_path = '/Users/admlanno/Desktop/Курсовая/raw_data/Untitled Project.mov'\n",
+    "output_folder = '/Users/admlanno/Desktop/Курсовая/raw_data/Frames/guard_3_view2'\n",
     "\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
@@ -42,11 +42,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 32 frames out of 162 total frames.\n"
+      "Extracted 33 frames out of 168 total frames.\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   }
  ],
  "metadata": {
