--- a/scripts/frame_making.ipynb
+++ b/scripts/frame_making.ipynb
@@ -6,16 +6,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-20T10:34:34.417991Z",
-     "start_time": "2025-01-20T10:34:32.292497Z"
+     "end_time": "2025-01-20T12:59:52.175812Z",
+     "start_time": "2025-01-20T12:59:51.449077Z"
     }
    },
    "source": [
     "import cv2\n",
     "import os\n",
     "\n",
-    "video_path = '/Users/admlanno/Desktop/Курсовая/raw_data/Untitled Project.mov'\n",
-    "output_folder = '/Users/admlanno/Desktop/Курсовая/raw_data/Frames/guard_3_view2'\n",
+    "video_path = '/Users/admlanno/Desktop/Basketball_foul_detection/Untitled Project.mov'\n",
+    "output_folder = '/Users/admlanno/Desktop/Basketball_foul_detection/Frames/guard_4_view_1'\n",
     "\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 33 frames out of 168 total frames.\n"
+      "Extracted 10 frames out of 54 total frames.\n"
      ]
     }
    ],
