--- a/test_train.ipynb
+++ b/test_train.ipynb
@@ -871,7 +871,165 @@
     }
    },
    "cell_type": "code",
-   "source": "python test.py --weights runs/train/yolov5_model2/weights/best.pt --data /path/to/data.yaml --img-size 640 --batch-size 16 --save-txt --save-img",
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Подгрузка данных\n",
+    "res = pd.read_csv('restored.csv')\n",
+    "\n",
+    "activity_mapping = {\n",
+    "    \"WALKING\": 1,\n",
+    "    \"WALKING_UPSTAIRS\": 2,\n",
+    "    \"WALKING_DOWNSTAIRS\": 3,\n",
+    "    \"SITTING\": 4,\n",
+    "    \"STANDING\": 5,\n",
+    "    \"LAYING\": 6\n",
+    "}\n",
+    "\n",
+    "res = res['matched_Activity'].map(activity_mapping).astype(int)\n",
+    "best_accuracy = 0\n",
+    "best_seed = 0\n",
+    "# Цикл по количеству нейронов\n",
+    "for sed in range(1, 100):\n",
+    "\n",
+    "    class Model(nn.Module):\n",
+    "        def __init__(self, input_size):\n",
+    "            super(Model, self).__init__()\n",
+    "\n",
+    "            self.fc1 = nn.Linear(input_size, 37)\n",
+    "            self.bn1 = nn.BatchNorm1d(37)\n",
+    "            self.relu1 = nn.ReLU()\n",
+    "            self.dropout1 = nn.Dropout(p=0)\n",
+    "\n",
+    "            self.fc2 = nn.Linear(37, 7)\n",
+    "            self.bn2 = nn.BatchNorm1d(7)\n",
+    "            self.relu2 = nn.ReLU()\n",
+    "            self.dropout2 = nn.Dropout(p=0)\n",
+    "\n",
+    "            self.output_layer = nn.Linear(7, 6)\n",
+    "\n",
+    "        def forward(self, x):\n",
+    "            x = self.fc1(x)\n",
+    "            x = self.bn1(x)\n",
+    "            x = self.relu1(x)\n",
+    "            x = self.dropout1(x)\n",
+    "\n",
+    "            x = self.fc2(x)\n",
+    "            x = self.bn2(x)\n",
+    "            x = self.relu2(x)\n",
+    "            x = self.dropout2(x)\n",
+    "\n",
+    "            x = self.output_layer(x)\n",
+    "            return x\n",
+    "\n",
+    "    set_seed(sed)\n",
+    "    torch.cuda.manual_seed(sed)\n",
+    "\n",
+    "    # Convert numpy arrays to torch tensors\n",
+    "    tX_tensor = torch.tensor(tX, dtype=torch.float32)\n",
+    "    tY_tensor = torch.tensor(tY.values, dtype=torch.long)\n",
+    "\n",
+    "    # If using GPU\n",
+    "    tX_tensor = tX_tensor.to(device)\n",
+    "    tY_tensor = tY_tensor.to(device)\n",
+    "\n",
+    "    dataset = TensorDataset(tX_tensor, tY_tensor)\n",
+    "    val_size = int(len(dataset) * 0.3)\n",
+    "    train_size = len(dataset) - val_size\n",
+    "    train_dataset, val_dataset = random_split(dataset, [train_size, val_size])\n",
+    "\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=512, shuffle=True)\n",
+    "    val_loader = DataLoader(val_dataset, batch_size=512)\n",
+    "\n",
+    "    model = Model(input_size=tX.shape[1]).to(device)\n",
+    "    print(model)\n",
+    "\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "    train_losses = []\n",
+    "    val_losses = []\n",
+    "    accuracies = []\n",
+    "\n",
+    "    # Training loop with data collection\n",
+    "    epochs = 30\n",
+    "    for epoch in range(epochs):\n",
+    "        running_loss = 0.0\n",
+    "        for inputs, labels in train_loader:\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            running_loss += loss.item()\n",
+    "        avg_train_loss = running_loss / len(train_loader)\n",
+    "        train_losses.append(avg_train_loss)\n",
+    "\n",
+    "\n",
+    "        # Validation loop\n",
+    "        with torch.no_grad():\n",
+    "            val_loss = 0.0\n",
+    "            correct = 0\n",
+    "            total = 0\n",
+    "            for inputs, labels in val_loader:\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)\n",
+    "                outputs = model(inputs)\n",
+    "                loss = criterion(outputs, labels)\n",
+    "                val_loss += loss.item()\n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                total += labels.size(0)\n",
+    "                correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "            avg_val_loss = val_loss / len(val_loader)\n",
+    "            accuracy = 100 * correct / total\n",
+    "            val_losses.append(avg_val_loss)\n",
+    "            accuracies.append(accuracy)\n",
+    "\n",
+    "    # Assuming vX is a numpy array containing your validation data\n",
+    "    # You need to convert it into a torch tensor with the correct type\n",
+    "    vX_tensor = torch.tensor(vX, dtype=torch.float32)\n",
+    "\n",
+    "    # If using GPU, send the model and the tensor to GPU\n",
+    "    model.to('cuda')\n",
+    "    vX_tensor = vX_tensor.to('cuda')\n",
+    "\n",
+    "    # Set the model to evaluation mode\n",
+    "    model.eval()\n",
+    "\n",
+    "    # No need to compute gradients (for memory efficiency)\n",
+    "    with torch.no_grad():\n",
+    "        # Make predictions\n",
+    "        predictions = model(vX_tensor)\n",
+    "\n",
+    "    # If you need class probabilities, apply softmax\n",
+    "    probabilities = torch.softmax(predictions, dim=1)\n",
+    "\n",
+    "    # To get the predicted class labels, get the index of the max log-probability\n",
+    "    predicted_labels = torch.max(probabilities, 1)[1]\n",
+    "\n",
+    "    # Convert to numpy array if needed (for further processing in non-PyTorch code)\n",
+    "    probabilities_np = probabilities.cpu().numpy()\n",
+    "    predicted_labels_np = predicted_labels.cpu().numpy()\n",
+    "\n",
+    "    # Now 'probabilities_np' holds class probabilities and 'predicted_labels_np' holds class predictions\n",
+    "    YLab = [f'{i}/{s}' for i, s in enumerate('walking walking_upstairs walking_downstairs sitting standing laying'.split())]  # column labels\n",
+    "    pd.DataFrame(probabilities_np[:3,:], columns=YLab).style.background_gradient(cmap='coolwarm', axis=1)  # display first few predictions\n",
+    "    result = pd.DataFrame(predicted_labels_np + 1, columns=['y']) # labels are shifted to the initial state\n",
+    "\n",
+    "\n",
+    "    accuracy = accuracy_score(res, result[\"y\"])\n",
+    "    if best_accuracy < accuracy:\n",
+    "        best_accuracy = accuracy\n",
+    "        best_seed = sed\n",
+    "        print(f'best accuracy {best_accuracy} is for {sed}')\n",
+    "    print(f\"Accuracy модели для {sed}: {accuracy:.4f}, best seed is {best_seed} with accuracy = {best_accuracy}\")\n"
+   ],
    "id": "2844aeb8051c7501",
    "outputs": [
     {
